--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,5 @@
 {
-    "builds": [
-        {
-            "src": "./myApp.py",
-            "use": "@vercel/python"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "./"
-        }
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/myApp" }
     ]
 }
