--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/myApp" }
+    "builds": [
+        {
+            "src": "./myApp.py",
+            "use": "@vercel/python"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "./"
+        }
     ]
 }
